fix: tendencies img with on mobile devices

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -164,8 +164,7 @@
   font-weight: 200;
 }
 
-.tendenciasimg img{
-  
+.tendencias img{
   position: relative;
   width: 100%;
   
